# ignorer

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
src/ignorer/: __main__.py
tests/: test.cfg.json
tests/templates/: b.gitignore
